; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/boot/extr_serial.c_serial_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/boot/extr_serial.c_serial_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.serial_console_data* }
%struct.serial_console_data = type { i32 (...)* }

@console_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @serial_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @serial_close() #0 {
  %1 = alloca %struct.serial_console_data*, align 8
  %2 = load %struct.serial_console_data*, %struct.serial_console_data** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @console_ops, i32 0, i32 0), align 8
  store %struct.serial_console_data* %2, %struct.serial_console_data** %1, align 8
  %3 = load %struct.serial_console_data*, %struct.serial_console_data** %1, align 8
  %4 = getelementptr inbounds %struct.serial_console_data, %struct.serial_console_data* %3, i32 0, i32 0
  %5 = load i32 (...)*, i32 (...)** %4, align 8
  %6 = icmp ne i32 (...)* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %0
  %8 = load %struct.serial_console_data*, %struct.serial_console_data** %1, align 8
  %9 = getelementptr inbounds %struct.serial_console_data, %struct.serial_console_data* %8, i32 0, i32 0
  %10 = load i32 (...)*, i32 (...)** %9, align 8
  %11 = call i32 (...) %10()
  br label %12

12:                                               ; preds = %7, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
